# pier-o-bois

./: .gitignore  LICENSE  README.md
php/: envoi_course.php  liste_resultats.php  mod50_visforms_1.sql  reception_resultats.php
src/: CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.h  CourseWindow.cpp  CourseWindow.h  Gui.cpp  Gui.h  MainWindow.cpp  MainWindow.h  TableWindow.cpp  TableWindow.h  TaskListWindow.cpp  TaskListWindow.h  main.cpp
src/icl/: CMakeLists.txt  README.md
src/icl/json/: JsonReader.cpp
src/icl/lora/: LoRaMac-api-v3.cpp  LoRaMac-api-v3.h  LoRaMac-board.h  LoRaMac.cpp  LoRaMac.h  LoRaMacCrypto.cpp  LoRaMacCrypto.h
src/manolab/: Settings.cpp  Settings.h
src/manolab/lib/ixxat/libixxat/: libixxat.cpp
src/manolab/lib/serial/: LICENSE  SerialPort.cpp  SerialPort.h  serial.c  serial.h
src/plugins/zebrafx7500/: CMakeLists.txt  Zebra7500.cpp  Zebra7500.h  Zebra7500Util.cpp  Zebra7500Util.h  rfidapi.h  rfidapiConstants.h  rfidapiErrors.h  rfidapiStructs.h  rfidapiTypes.h
